# tick-listo-cli

./: .gitignore  .mcp.json  LICENSE  README.md  ascii_header.txt  pyproject.toml  reminders.json  ticklisto_data.json
.specify/memory/: constitution.md
config/: config.example.json  config.json
docs/: 003_spec.md  PHASE_10_COMPLETION_SUMMARY.md  Todo_App_Feature_Progression.md
history/adr/: 001-rich-ui-layer-with-enhanced-visual-components.md
specs/001-tick-listo-cli-basic-console-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-intermediate-tick-listo-cli-enhancements/: close_github_issues.py  create_github_issues.py  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-advance-ticklisto-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: __main__.py
src/tick_listo_cli/: __main__.py
tests/contract/: test_api_contract.py  test_backward_compatibility.py  test_gmail_api_contract.py
tests/integration/: test_cli_commands.py  test_cli_integration.py  test_email_reminders.py  test_performance.py  test_persistence.py  test_recurring_tasks.py  test_reminder_service.py  test_search_filter_integration.py  test_task_operations.py  test_task_sorting.py  test_task_with_time.py
tests/performance/: test_performance.py
tests/stability/: test_reminder_service_stability.py
tests/unit/: test_backward_compatibility.py  test_date_parser.py  test_filter_service.py  test_gmail_service.py  test_id_manager.py  test_recurring_series.py  test_recurring_task_service.py  (+11 more)
(+83 files in other folders)
