[project]
name = "ticklisto"
version = "3.0.0"
description = "Tick Listo - Your Ultimate Task Management - Where Productivity Meets Elegance"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rich>=14.3.1",
    "python-dateutil>=2.8.0",
    "google-api-python-client>=2.189.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "google-auth-httplib2>=0.2.0",
    "pytz>=2025.2",
    "google>=3.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
